cmake_minimum_required(VERSION 3.31)
project(SS01 C)

set(CMAKE_C_STANDARD 23)

add_executable(SS01 PTIT_CNTT3_IT104_Session01_Bai01.c
        PTIT_CNTT3_IT104_Session01_Bai02.c
        PTIT_CNTT3_IT104_Session01_Bai03.c
        PTIT_CNTT3_IT104_Session01_Bai04.c
        PTIT_CNTT3_IT104_Session01_Bai05.c
        PTIT_CNTT3_IT104_Session01_Bai06.c
        PTIT_CNTT3_IT104_Session01_Bai07.c
        PTIT_CNTT3_IT104_Session01_Bai08.c
)
